...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id = "@+id/nrc_layout"
        android:background="@drawable/fragmentborder"
        android:orientation="vertical"
...

        <LinearLayout
            android:id="@+id/layoutNRCName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

            <EditText
                android:id="@+id/Client_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

        <LinearLayout
            android:id="@+id/layoutNRCFather"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
...
                android:background="@drawable/edittext_round"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/Clients_Father"
                android:paddingLeft="2sp"/>

...

        <LinearLayout
            android:id="@+id/layoutNRCMother"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
...
                android:background="@drawable/edittext_round"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/Clients_Mother"
                android:paddingLeft="2sp"/>

...
                <ImageButton
                    android:layout_marginTop="10sp"
                    android:id="@+id/DOBDatePicker"
                    android:layout_marginLeft="10sp"
                    android:layout_width="35sp"
...

        <LinearLayout
            android:id="@+id/layoutNRCAgeSex"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
...
                android:layout_weight="1"
                android:background="@drawable/gradient_spinner"
                android:id="@+id/ClientsSexSpinner"
                android:entries="@array/nrcClientsSex"/>
        </LinearLayout>
...
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layoutNRCDistUpz"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
...
                android:layout_weight="1.5"
                android:background="@drawable/gradient_spinner"
                android:id="@+id/Clients_District"/>

            <TextView
...
                android:background="@drawable/gradient_spinner"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/Clients_Upazila" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/union_village"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
...
                android:background="@drawable/gradient_spinner"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/Clients_Union"
                android:paddingLeft="2sp"/>

...
                android:background="@drawable/gradient_spinner"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/Clients_Village"
                android:paddingLeft="2sp" />

...

        <LinearLayout
            android:id="@+id/couple_mobile_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

            <EditText
                android:id="@+id/NrcClients_Mobile_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...

        <LinearLayout
            android:id="@+id/layoutNationalityWithSaving"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

            <Button
                android:id="@+id/nrcProceed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...
                android:paddingLeft="2sp"
                android:paddingRight="10sp"
                android:text="SAVE" />

            <View
...
