<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutLoginMain"
    android:paddingTop="50dp"
    android:background="@drawable/login_bg"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_margin="60dp"
        android:paddingBottom="25dp"
        android:paddingTop="40dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:id="@+id/layoutLoginBody"
        android:background="@drawable/border_round">

        <LinearLayout android:id="@+id/nameLayout"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <TextView
                    android:textSize="20dp"
                    android:id="@+id/providerNameLabel"
                    android:textColor="@color/white"
                    android:padding="5dp"
                    android:text="নাম"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:background="@color/button_material_dark"
                    android:layout_height="match_parent" />
            </LinearLayout>

        <LinearLayout android:id="@+id/providerIdLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_below="@+id/nameLayout">

            <TextView
                android:textSize="20dp"
                android:id="@+id/providerIdLabel"
                android:text="@string/providerLabel"
                android:typeface="normal"
                android:textColor="@color/text_color"
                android:background="@drawable/textview_round"
                android:padding="5dp"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:gravity="right|center_vertical"
                android:layout_height="match_parent" />

            <EditText
                android:layout_gravity="bottom"
                android:ellipsize="start"
                android:inputType="number"
                android:background="@drawable/edittext_round"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:id="@+id/providerId"
                android:textColor="@color/text_color"
                android:drawableRight="@drawable/user"
                android:padding="5dp" />

        </LinearLayout>

        <LinearLayout android:id="@+id/passwordLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_below="@+id/providerIdLayout">

            <TextView
                android:textSize="20dp"
                android:id="@+id/providerPasswordLabel"
                android:textColor="@color/text_color"
                android:padding="5dp"
                android:text="@string/providerPassLabel"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:gravity="right|center_vertical"
                android:background="@drawable/textview_round"
                android:layout_height="match_parent" />
            <EditText
                android:ellipsize="start"
                android:background="@drawable/edittext_round"
                android:id="@+id/providerPassword"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:drawableRight="@drawable/pasword"
                android:padding="5dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordLayout">

            <Button
                android:layout_centerVertical="true"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginbtn1"
                android:textColor="@color/button_material_dark"
                android:background="@drawable/button_style_offwhite"
                android:textAlignment="center"
                android:text="@string/btn_login"
                android:textSize="20sp"
                android:onClick="startLogin"/>

            <TextView
                android:textSize="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:id="@+id/helplineLabel"
                android:textColor="@color/white"
                android:gravity="center_horizontal"
                android:text="@string/helpline"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>


        </LinearLayout>
    </RelativeLayout>

    <Button
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:id="@+id/buttonOpenMoodle"
        android:layout_below="@id/layoutLoginBody"
        android:textColor="@color/white"
        android:background="@drawable/button_style_moderateblue"
        android:textAlignment="center"
        android:text="@string/btn_tutorial"
        android:textSize="18sp"
        android:textStyle="bold"
        android:onClick="openTutorial"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="bottom"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="20dp"
        android:gravity="bottom">



        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#70000000">

            <ImageView
                android:id="@+id/imageViewCheckServer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:src="@android:drawable/btn_star_big_on" />

            <TextView
                android:id="@+id/appVersion"
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical"
                android:text="©2016 eMIS "
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageViewTools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"
                android:src="@android:drawable/ic_menu_manage" />
        </RelativeLayout>


        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="150sp"
            android:layout_height="90sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/textViewDistrict"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo_image"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:visibility="gone"
            android:textColor="@color/dodgerblue"/>

    </RelativeLayout>

</RelativeLayout>