...
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select"
            android:id="@+id/buttonPlacePopUpOK"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_style"
            android:onClick="PlacePopUpOK"
            />

...
